...
      "Browse shops, compare prices, and discover venues for your next game night!"
  const val POSTS_PAGE_END_TEXT =
      "Connect with gamers worldwide! Share strategies, reviews, and join the conversation about your favorite games."
  const val BOARD_GAME_NIGHT = "Board Game Night"
  const val FIVE_NEW_MESSAGES = "5 new messages"
  const val PARTICIPANTS_SECTION_TEXT = "Participants"
  const val PARTICIPANT_1 = "Alexandre"
  const val PARTICIPANT_2 = "Thomas"
  const val DATE_PREVIEW = "Date"
  const val TIME_PREVIEW = "Time"
  const val SESSION_CREATION_CHOOSE_FRIENDS = "Choose a schedule and invite friends"
  const val SESSION_CREATION_CREATE_SESSION_BUTTON =
      "Use the button in the discussion's screen to create a new session"
...
